--- a/style.css
+++ b/style.css
@@ -252,7 +252,17 @@ hr {
     color: white;
   }
   .text-box h2 {
-    font-size: 2.5rem;
+    font-size: 2rem !important;
+  }
+  .text-box h3 {
+    font-size: 1.5rem !important;
+  }
+  .text-box h4 {
+    font-size: 1rem !important;
+  }
+
+  .text-box {
+    padding: 1% 5% 1% 5% !important;
   }
 }
 
